<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/idFood"
        android:layout_width="261dp"
        android:layout_height="179dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/imgFood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/food" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="293dp"
        android:layout_height="41dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="@string/txtTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtHint"
        android:inputType="number|numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spnGroup"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <Button
        android:id="@+id/btnCalcTip"
        android:layout_width="137dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnCalcTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGroup" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="202dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcTip" />
</androidx.constraintlayout.widget.ConstraintLayout>